--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <section class="izquierda">
-            <textarea  class="input-texto" cols="40" rows="6"  placeholder="Ingrese el texto aquí"></textarea>
+            <textarea  class="input-texto" cols="40" rows="6"  placeholder="Ingrese el texto aquí *-*"></textarea>
             <div id="texto">
                 <img src="imagenes/icono.png" alt="Logo ">
                 solo letras minúsculas y sin acentos</div>
